--- a/choteppall.html
+++ b/choteppall.html
@@ -351,7 +351,7 @@
         </div>
 
     <div class="blueprint">
-       <img src="images/chotepalliImages/cphl.jpg" alt="Choteppalle" />
+       <img src="images/chotepall/cphl.jpg" alt="Choteppalle" />
     </div>
   </div>
 
